# alph

./: .gitignore  CMakeLists.txt  Makefile  README.md  build-ubuntu.sh  icminers-alph.example.conf  run-icminers-multigpu-ubuntu.sh  run-icminers-ubuntu.sh  run-srb-dashboard-ubuntu.sh
src/: alph_cuda_miner.cu
